<resources>
    <string name="app_name">My Music Player</string>
    <string name="shuffle_button">Shuffle Button</string>
    <string name="shuffle">Shuffle</string>
    <string name="favourites">Favourites</string>
    <string name="my_playlist">My PlayList</string>
    <string name="all_songs">All Songs</string>
    <string name="music">Music</string>
    <string name="song_name">Song Name</string>
    <string name="start_position">00:00</string>
    <string name="end_position">Loading</string>
    <string name="repeat_btn">Repeat</string>
    <string name="back_btn">Back</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">App Icon</string>
    <string name="welcome_to_music_world">Welcome to Music World</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Name</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="song_image">Song Image</string>
    <string name="playlist_name">PlayList Name</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">ADD</string>
    <string name="remove_all">Remove All</string>
    <string name="feedback_topic">Topic i.e. Suggestion, Error etc</string>
    <string name="email_feedback">Email (Optional)</string>
    <string name="send">Send</string>
    <string name="set_themes">Set Themes</string>
    <string name="version_name">Version Name</string>
    <string name="play_next">Play Next</string>
    <string name="volume_booster">Volume Booster</string>
    <!--    <string name="playlist_name">PlayList Name</string>-->
    <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
    <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
    <string name="playlist_note">Tip: Click On ➕ To Create New Playlist. </string>
</resources>