<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    android:fitsSystemWindows="true">

    <!--    for refreshing layout on swipe from top-->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/nowPlaying"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,UnknownId">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/shuffle_btn"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_shuffle"
                        android:text="@string/shuffle"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/favourite_btn"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_favourites"
                        android:text="@string/favourites"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/playlist_btn"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_playlist"
                        android:text="@string/my_playlist"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textAllCaps="false"/>

                <!--Play Next Button-->
                <Button
                    android:id="@+id/playNextBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_play_next"
                    android:text="@string/play_next"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                </LinearLayout>

            <!--    All Songs    -->
                <TextView
                android:id="@+id/totalSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_songs"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@drawable/ic_scrollbar"/>
        </LinearLayout>

         <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.abhishek.mymusicplayer.NowPlaying"
            tools:layout = "@layout/fragment_now_playing"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_bar"
        app:menu="@menu/nav_menu"
        tools:ignore="InvalidId"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>