<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayListActivity">

  <LinearLayout
      android:id="@+id/linearPL"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="2dp"
      android:background="?attr/themeColor">

    <ImageButton
        android:id="@+id/backBtnPL"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back_btn"
        android:backgroundTint="@android:color/transparent"
        android:padding="5dp"
        app:tint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/my_playlist"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>
  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/playListRV"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/linearPL"
      android:scrollbarThumbVertical="@drawable/ic_scrollbar"
      android:scrollbars="vertical"
      android:paddingBottom="40dp"
      android:layout_marginTop="10dp"/>

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
      android:id="@+id/addPlayListBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      tools:ignore="MissingConstraints"
      app:icon="@drawable/ic_add"
      android:backgroundTint="@color/white"
      app:iconSize="35dp"
      app:iconTint="?attr/themeColor"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.9"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.9"
      app:strokeWidth="2dp"
      app:strokeColor="?attr/themeColor"/>

  <TextView
      android:id="@+id/instructionPA"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:text="@string/playlist_note"
      android:textSize="20sp"
      android:padding="16dp"
      android:gravity="center"
      android:textColor="?attr/dialogBtnBackground"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>